# investoros-web

./: CLAUDE.md  claude_api_server.py  claude_worker.py  extract_tracerfy_contacts.py  tracy_leads_poller.py  tracy_skiptrace_automation.py  vps_deploy.sh  vps_migrate_memory.sh
.github/workflows/: agents-cron.yml  deploy-modal.yml  (+4 more)
agents/: AGENTS.md  CLAUDE.md  INVESTOROS_AGENTS_MEMORIA.md  MODEL_CONFIG.yaml  PROTOCOLO_EJECUCION.md  VALIDATION_DASHBOARD.md  airtable.md  airtable_escalation_logger.py  alerta_telegram.sh  canva_templates.md  claude_inbox.json  claude_outbox.json  cloudinary_config.md  cola_mensajes.md  creativo.md  director.md  fact-checker.agent.md  fact-checker.md  matematico.agent.md  matematico.md  memoria_alex.md  memoria_fact_checker.md  memoria_matematico.md  memoria_scout.md  memoria_social_media.md  memoria_tracy.md  model_assignment.py  model_router_config.json  programador.md  protocolo_seguro.md  scout.agent.md  scout.md  secretario.md  shared_conversation.json  social_media.md  tracy.md
agents/cartografo/mcp_server/: pyproject.toml  server.py
docs/: Asistant-role.md  INVESTOROS_MEMORIA.md  Sistema_Alex_RealEstate.md
rag/: alex_rag.py
scripts/: build_claude_project_context.sh  build_tenant_context.sh  curate_by_tag_map.py  export_agents_to_investoros.sh  sanitize_file.py
secretario/: auth_google.py  calendar_manager.py  email_monitor.py  requirements.txt  secretario-email.service
telegram_bot/: .deploy-trigger  INVESTOROS_TELEGRAM_MEMORY.md  alex_bot.py  iniciar_bot.bat  instalar.bat  requirements.txt  telegram_memory.md
(+194 files in other folders)
